<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map_menu_item" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/chat_menu_item" />

    <item
        android:id="@+id/action_empty"
        android:title=""
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false"
        />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications_menu_item" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile_menu_item" />

</menu>