<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLoginButtons">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="top|left"
                app:srcCompat="@drawable/ic_logo" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/emailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/email_sign_in"
                android:textColor="@color/textColorLoginButtons"
                app:backgroundTint="@color/backgroundLoginButtons"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_mail"
                app:iconTint="@color/fui_transparent"
                app:iconTintMode="add" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/google_signin"
                android:textColor="@color/textColorLoginButtons"
                app:backgroundTint="@color/backgroundLoginButtons"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_google"
                app:iconTint="@color/fui_transparent"
                app:iconTintMode="add" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/facebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="65dp"
                android:gravity="center"
                android:text="@string/facebook_sign_in"
                android:textColor="@color/textColorLoginButtons"
                app:backgroundTint="@color/backgroundLoginButtons"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_facebook"
                app:iconTint="@color/fui_transparent"
                app:iconTintMode="screen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_text_p1"
                android:textColor="@color/textColorLoginButtons"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/register_text_p2"
                android:textColor="@color/textColorLoginButtons" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>